Mon Aug 17 01:40:00 1998  Tim Janik  <timj@gtk.org>

	* configure.in: version bump to 1.1.1, binary age 0, interface age 0.
	pass "gmodule" to AM_PATH_GLIB, with that we require libgmodule.so now.

	* gtk/gtkmain.c (gtk_init): since glib's g_return*_if_fail macros log
	with G_LOG_LEVEL_CRITICAL now, i added "--g-fatal-checks",
	"--gdk-fatal-checks" and "--gtk-fatal-checks". that makes up six
	different *-fatal-* arguments now. this needs to be revised and
 	compressed to a reasonable amount of arguments.

Sun Aug 16 20:51:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_init): fatal warning option is split up now,
	"--g-fatal-warnings" causes fatal warnings in GLib,
 	"--gdk-fatal-warnings" causes fatal warnings in Gdk,
 	"--gtk-fatal-warnings" causes fatal warnings in Gtk.

	* gtk/Makefile.am: define G_LOG_DOMAIN for gtk.
	* gdk/Makefile.am: define G_LOG_DOMAIN for gdk.

	* gtk/testgtk.c: 
	* gdk/gxid.c:
 	we need ugly #undef G_LOG_DOMAIN at the start of these files currently,
 	since automake doesn't support per target _CFLAGS yet.

	* configure.in: require GLib 1.1.3.

Sat Aug 15 03:19:30 1998  John Ellis  <johne@bellatlantic.net>

	* gtk/gtkctree.[ch] (gtk_ctree_set_drag_compare_func): New function
	to set a callback to test if a node in drag can be dropped onto
	it's currrent location.
	* gtk/gtkctree.c (set_mouse_cursor),(check_cursor): New functions
	to change the pointer when a drag destination is not allowed.

Thu Aug 13 21:06:00 1998  Raph Levien  <raph@gtk.org>

	* gdk/gdkrgb.c: committing a patch by Ray Lehtiniemi that
	speeds up the 565_d case by about 25% total. Thanks Ray!

Thu Aug 13 16:47:44 1998  Owen Taylor  <otaylor@redhat.com>

	* Changed GtkSignalFunc back to () from (void). (again!)

	* Added file README.cvs-commits
	
Thu Aug 13 09:11:11 BST 1998  Tony Gale  <gale@gtk.org>

        * docs/gtk_tut.sgml:
          - Tidy up of the menufactory example from
            Andy Kahn <kahn@zk3.dec.com>